Restructure project tree

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # ---
 # role: [core]
-# purpose: Project documentation
+# purpose: Environment template
 # dependencies: []
 # mutation_ready: true
 # test_status: [ci_passed]
 # ---
-# MEV-V3
-Placeholder project documentation.
+API_KEY=
+DB_URI=
