--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # ---
 # role: [core]
-# purpose: Project documentation
+# purpose: Git ignore rules
 # dependencies: []
 # mutation_ready: true
 # test_status: [ci_passed]
 # ---
-# MEV-V3
-Placeholder project documentation.
+__pycache__/
+node_modules/
+.env
