--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,63 @@
-# ---
-# role: [core]
-# purpose: Python dependencies
-# dependencies: []
-# mutation_ready: true
-# test_status: [ci_passed]
-# ---
-# Add Python package requirements here
+# Core dependencies
+web3==6.11.3
+asyncio==3.4.3
+uvloop==0.19.0
+click==8.1.7
+
+# Ethereum and DeFi
+eth-account==0.10.0
+eth-utils==3.0.0
+multicall==0.7.1
+flashbots==1.0.2
+
+# Data processing
+numpy==1.26.2
+pandas==2.1.4
+scipy==1.11.4
+
+# Database and caching
+redis==5.0.1
+asyncpg==0.29.0
+sqlalchemy==2.0.23
+alembic==1.13.0
+
+# API and web
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.2
+httpx==0.25.2
+
+# Monitoring and telemetry
+prometheus-client==0.19.0
+discord.py==2.3.2
+sentry-sdk==1.38.0
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+
+# Development tools
+black==23.11.0
+flake8==6.1.0
+mypy==1.7.1
+pre-commit==3.5.0
+
+# Infrastructure
+docker==6.1.3
+kubernetes==28.1.0
+
+# Security
+cryptography==41.0.7
+python-jose==3.3.0
+
+# Cloud
+google-cloud-secret-manager==2.17.0
+google-cloud-logging==3.8.0
+
+# Utilities
+python-dotenv==1.0.0
+pyyaml==6.0.1
+orjson==3.9.10
+structlog==23.2.0
