--- a/requirements.txt
+++ b/requirements.txt
@@ -61,3 +61,8 @@ python-dotenv==1.0.0
 pyyaml==6.0.1
 orjson==3.9.10
 structlog==23.2.0
+
+scikit-learn==1.3.2
+networkx==3.2.1
+PyGithub==2.1.1
+ccxt==4.1.22
